--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ flutter:
 
   assets:
     - assets/images/categories/
+    - assets/images/menmodels/
     - assets/logo/
     - assets/svgs/
     - assets/videos/
